# select-ai-test

./: .gitignore  DEPLOY_OCI.md  LICENSE  NOTICE  PRIVATE_CA_HTTPS.md  Prerequisites.md  README.md  cloud-init.tftpl  config.yaml.example  main.tf  models.txt  outputs.tf  pyproject.toml  regions.txt  schema.yaml  variables.tf
app/: auth.py  config.py  db.py  deps.py  mailer.py  main.py  plsql.py  ratelimit.py
app/routers/: _mock.py  agents.py  auth.py  chat.py  databases.py  nl2sql.py  objects.py  predefined.py  profiles.py
deploy/http/: cloud-init.tftpl  main.tf  outputs.tf  schema.yaml  variables.tf
deploy/https-existing-vm/: install.sh.tftpl  main.tf  outputs.tf  schema.yaml  variables.tf
scripts/: deploy.sh  install.sh  oracle-ai-tool.service  run.sh  stop.sh
static/: index.html
static/css/: layout.css  redwood.css
static/js/: api.js  app.js  auth.js  db_selector.js  store.js  util.js
static/js/components/: table.js  tabs.js  toast.js  tree.js
static/js/views/: access_admin.js  agent_test.js  ai_chat.js  api_admin.js  database_admin.js  nl2sql.js  object_meta.js  predefined_query.js  profile_test.js
static/mock/: benchmark_result.json  databases.json  profile_attributes.json  profile_objects.json  profiles.json  team_run_result.json  teams_tree.json
