[project]
name = "project"
version = "0.1.0"
description = "Oracle AI Database Test Tool — SELECT AI / AI Agent Team PoC"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "fastapi>=0.136.3",
    "oracledb>=4.0.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.48.0",
]
